--- a/main/BUILD
+++ b/main/BUILD
@@ -1,16 +1,10 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
 
-cc_library(
-    name = "hello-greet",
-    srcs = ["hello-greet.cc"],
-    hdrs = ["hello-greet.h"],
-)
-
 cc_binary(
     name = "hello-world",
-    srcs = ["hello-world.cc"],
+    srcs = ["main.cc"],
     deps = [
-        ":hello-greet",
-        "//lib:hello-time",
+        "//lib:leetcode",
+        "@eigen3",
     ],
 )
