--- a/.bazelrc
+++ b/.bazelrc
@@ -4,3 +4,4 @@ build:linux --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 build:linux --incompatible_strict_action_env=true
 # Enable the CC toolchain resolution based on platforms.
 build:linux --incompatible_enable_cc_toolchain_resolution
+build:windows --incompatible_enable_cc_toolchain_resolution
